--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Tainica Deltă</title>
 </head>
 <body>
-    
+    <h1>
+        Tainica Deltă
+    </h1>
+    <script>
+        window.onload = function() {
+            location.href = "https://facebook.com/tainicadelta/";
+        }
+    </script>
 </body>
 </html>
