--- a/index.html
+++ b/index.html
@@ -334,6 +334,72 @@
                             <p class="text"><!--  descriere --></p>
                         </div>
                     </div> <!-- single portfolio -->
+                    
+<!--  -->
+            <div class="row grid">
+                <div class="col-lg-4 col-sm-6 branding-3 planning-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.08.jpg" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.08.jpg"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#"><!--  titlu descriere --></a></h4>
+                            <p class="text"><!--  descriere --></p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <div class="col-lg-4 col-sm-6 marketing-3 research-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.13.jpg" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.13.jpg"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#"><!--  titlu descriere --></a></h4>
+                            <p class="text"><!--  descriere --></p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <div class="col-lg-4 col-sm-6 branding-3 marketing-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.7s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.19.jpg" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.19.jpg"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#"><!--  titlu descriere --></a></h4>
+                            <p class="text"><!--  descriere --></p>
+                        </div>
+                    </div> <!-- single portfolio -->
+<!--  -->
                 </div>
                 <div class="col-lg-4 col-sm-6 planning-3 research-3">
                     <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
