--- a/index.html
+++ b/index.html
@@ -340,11 +340,11 @@
                 <div class="col-lg-4 col-sm-6 branding-3 planning-3">
                     <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
                         <div class="portfolio-image">
-                            <img src="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.08.jpg" alt="">
+                            <img src="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.08.jpeg" alt="">
                             <div class="portfolio-overlay d-flex align-items-center justify-content-center">
                                 <div class="portfolio-content">
                                     <div class="portfolio-icon">
-                                        <a class="image-popup" href="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.08.jpg"><i class="lni-zoom-in"></i></a>
+                                        <a class="image-popup" href="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.08.jpeg"><i class="lni-zoom-in"></i></a>
                                     </div>
                                     <div class="portfolio-icon">
                                         <a href="#"><i class="lni-link"></i></a>
@@ -361,11 +361,11 @@
                 <div class="col-lg-4 col-sm-6 marketing-3 research-3">
                     <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
                         <div class="portfolio-image">
-                            <img src="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.13.jpg" alt="">
+                            <img src="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.13.jpeg" alt="">
                             <div class="portfolio-overlay d-flex align-items-center justify-content-center">
                                 <div class="portfolio-content">
                                     <div class="portfolio-icon">
-                                        <a class="image-popup" href="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.13.jpg"><i class="lni-zoom-in"></i></a>
+                                        <a class="image-popup" href="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.13.jpeg"><i class="lni-zoom-in"></i></a>
                                     </div>
                                     <div class="portfolio-icon">
                                         <a href="#"><i class="lni-link"></i></a>
@@ -382,11 +382,11 @@
                 <div class="col-lg-4 col-sm-6 branding-3 marketing-3">
                     <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.7s">
                         <div class="portfolio-image">
-                            <img src="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.19.jpg" alt="">
+                            <img src="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.19.jpeg" alt="">
                             <div class="portfolio-overlay d-flex align-items-center justify-content-center">
                                 <div class="portfolio-content">
                                     <div class="portfolio-icon">
-                                        <a class="image-popup" href="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.19.jpg"><i class="lni-zoom-in"></i></a>
+                                        <a class="image-popup" href="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.19.jpeg"><i class="lni-zoom-in"></i></a>
                                     </div>
                                     <div class="portfolio-icon">
                                         <a href="#"><i class="lni-link"></i></a>
