--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 <div class="col-lg-4 col-sm-6 marketing-3 research-3">
                     <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
                         <div class="portfolio-image">
-                            <img src="assets/images/imagini/galerie/1.jpg" alt="">
+                            <img src="assets/images/imagini/bucatarie/WhatsApp Image 2019-09-03 at 12.38.13.jpeg" alt="">
                             <div class="portfolio-overlay d-flex align-items-center justify-content-center">
                                 <div class="portfolio-content">
                                     <div class="portfolio-icon">
