--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
     <!--====== FOOTER FOUR PART START ======-->
 
     <footer id="footer" class="footer-area">
-        <div class="footer-widget">
+<!--         <div class="footer-widget"> -->
 <!-- 
     container btm
  -->
