--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                         <div class="pricing-header text-center">
                             <h5 class="sub-title">Camera dubla / zi</h5>
                             <p class="month"><span class="price">280</span>/lei</p>
-                            <p>mic dejun inclus</p>
+                            <p>Cazare, mic dejun, transfer cu barca Murghiol - Uzlina</p>
                         </div>
                         <div class="pricing-list">
 
@@ -439,9 +439,9 @@
                             <i class="culoare fas fa-anchor fa-5x"></i>
                         </div>
                         <div class="pricing-header text-center">
-                            <h5 class="sub-title">3 + 1 Gratis</h5>
+                            <h5 class="sub-title">3 zile + 1 Gratis</h5>
                             <p class="month"><span class="price">840</span>/lei</p>
-                            <p>mic dejun inclus</p>
+                            <p>Cazare, mic dejun, transfer cu barca Murghiol - Uzlina</p>
                         </div>
                         <div class="pricing-list">
 
@@ -455,12 +455,12 @@
                 <div class="col-lg-4 col-md-7 col-sm-9">
                     <div class="pricing-style-one mt-40 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.8s">
                         <div class="pricing-icon text-center">
-                            <i class="culoare fas fa-anchor fa-5x"></i>
+                            <i class="culoare fas fa-fish fa-5x"></i>
                         </div>
                         <div class="pricing-header text-center">
-                            <h5 class="sub-title">5 + 2 Gratis</h5>
-                            <p class="month"><span class="price">1450</span>/lei</p>
-                            <p>mic dejun inclus</p>
+                            <h5 class="sub-title">De Florii hai la scrumbii</h5>
+                            <p class="month"><span class="price">600</span>/lei pers</p>
+                            <p>Doua nopti 3 zile, cazare, masa, transfer cu barca Murghiol - Uzlina</p>
                         </div>
                         <div class="pricing-list">
 
