--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/stil.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    
 
 
 </head>
@@ -124,7 +125,7 @@
                                         <div class="col-xl-6 col-lg-7 col-sm-10">
                                             <h2 class="carousel-title">Pensiunea</br> Tainica Delta</h2>
                                             <ul class="carousel-btn rounded-buttons">
-                                                <li><a class="main-btn rounded-three" href="https://wa.me/0040747224737">suna Acum</a></li>
+                                                <li><a class="main-btn rounded-three" href="https://wa.me/0040747224737">+40 747 224 737</a></li>
                                                 <li><a class="main-btn rounded-one" href="https://www.facebook.com/tainicadelta">Trimite Mesaj</a></li>
                                             </ul>
                                         </div>
@@ -207,18 +208,8 @@
                         </div>
                         <div class="about-content media-body">
                             <h4 class="about-title">Pensiune Delta Dunarii</h4>
-                            <p class="text">La Tainica Delta aveti parte de liniste si odihna in inima Deltei Dunarii unde va veti bucura de un cadru natural ce inconjoara pensiunea.</p>
-                        </div>
-                    </div> <!-- single about -->
-                </div>
-                <div class="col-lg-6">
-                    <div class="single-about d-sm-flex mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.4s">
-                        <div class="about-icon">
-                            <i class="culoare fas fa-map-marked fa-3x"></i>
-                        </div>
-                        <div class="about-content media-body">
-                            <h4 class="about-title">Excursii in Delta</h4>
-                            <p class="text">Pensiunea Tainica Delta va poate oferi un sejur de neuitat printr-o plimbare cu barca unde natura te invaluie in timp ce te relaxexi.</p>
+                            <p class="text">La Tainica Delta aveti parte de liniste si odihna in inima Deltei Dunarii unde va veti bucura de un cadru natural ce inconjoara pensiunea.</br>
+                            Pensiunea noastra va ofera 6 spatii de cazare (15 locuri).</p>
                         </div>
                     </div> <!-- single about -->
                 </div>
@@ -234,13 +225,33 @@
                     </div> <!-- single about -->
                 </div>
                 <div class="col-lg-6">
+                    <div class="single-about d-sm-flex mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.4s">
+                        <div class="about-icon">
+                            <i class="culoare fas fa-map-marked fa-3x"></i>
+                        </div>
+                        <div class="about-content media-body">
+                            <h4 class="about-title">Excursii in Delta</h4>
+                            <p>Organizarea de excursii in Delta Dunarii  este facuta in conditii de siguranta si confort, catre destinatii salbatice si exotice, iar noi va putem oferi excursia care vi se potriveste sau aventura care va lipseste.</br></br>
+                                Pe tot parcursul traseului veti putea admira stoluri de pelicani sau cormorani, egreta mare, rata rosie, lebada si multe alte specii de pasari dar si vegetatie specifica zonei.</br></br>
+                                Traseu 1 - Canal Uzlina - Lac Uzlina - Lac Isacel - Lac Isac (2.5 h)</br>
+                                Traseu 2 - Brat Sf. Gheorghe - Sf. Gheorghe (varsare in mare) si retur (o zi)</br>
+                                Traseu 3 - Canal Uzlina - Lac Isac - Crisan - Brat Sulina - Canal Magearu - Letea</br>
+                                Traseu 4 - Uzlina - Lac Isac - Crisan - Sulina
+                                </p>
+                        </div>
+                    </div> <!-- single about -->
+                </div>
+
+                <div class="col-lg-6">
                     <div class="single-about d-sm-flex mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.8s">
                         <div class="about-icon">
                             <i class="culoare fas fa-fish fa-3x"></i>
                         </div>
                         <div class="about-content media-body">
                             <h4 class="about-title">Pescuit Sportiv</h4>
-                            <p class="text">Fie ca esti amator sau profesionist, Delta Dunarii este locul perfect pentru pescuit sportiv in mijlocul naturii.</p>
+                            <p class="text">Fie ca esti amator sau profesionist, Delta Dunarii este locul perfect pentru pescuit sportiv in mijlocul naturii.</br><b>Locuri de pescuit propuse:</b></br>
+                                - Brat Sf. Gheorghe,  Lac Uzlina,  Lac Isac,  Lac Gorgova,  Canal Litcov
+                                </p>
                         </div>
                     </div> <!-- single about -->
                 </div>
