--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     <!--====== Title ======-->
     <title>Pensiune Tainica Delta</title>
 
-    <!--====== Favicon Icon ======-->
-    <!-- <link rel="shortcut icon" href="assets/favicon.png" type="image/png"> -->
-
     <!--====== Bootstrap css ======-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
@@ -283,6 +280,202 @@
                 </div>
             </div> <!-- row -->
             <div class="row grid">
+                <!-- gr1 -->
+                <div class="col-lg-4 col-sm-6 planning-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.7s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/imagini/202105/prez1.jpeg" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/imagini/202105/prez1.jpeg"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#"><!--  titlu descriere --></a></h4>
+                            <p class="text"><!--  descriere --></p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <div class="col-lg-4 col-sm-6 planning-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.7s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/imagini/202105/prez2.jpeg" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/imagini/202105/prez2.jpeg"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#"><!--  titlu descriere --></a></h4>
+                            <p class="text"><!--  descriere --></p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <div class="col-lg-4 col-sm-6 planning-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.7s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/imagini/202105/prez3.jpeg" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/imagini/202105/prez3.jpeg"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#"><!--  titlu descriere --></a></h4>
+                            <p class="text"><!--  descriere --></p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <!-- /gr1 -->
+
+                <!-- gr2 -->
+                <div class="col-lg-4 col-sm-6 planning-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.7s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/imagini/202105/ext1.jpeg" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/imagini/202105/ext1.jpeg"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#"><!--  titlu descriere --></a></h4>
+                            <p class="text"><!--  descriere --></p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <div class="col-lg-4 col-sm-6 planning-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.7s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/imagini/202105/ext2.jpeg" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/imagini/202105/ext2.jpeg"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#"><!--  titlu descriere --></a></h4>
+                            <p class="text"><!--  descriere --></p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <div class="col-lg-4 col-sm-6 planning-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.7s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/imagini/202105/ext3.jpeg" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/imagini/202105/ext3.jpeg"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#"><!--  titlu descriere --></a></h4>
+                            <p class="text"><!--  descriere --></p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <!-- /gr2 -->
+                <!-- gr3 -->
+                <div class="col-lg-4 col-sm-6 planning-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.7s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/imagini/202105/int1.jpeg" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/imagini/202105/int1.jpeg"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#"><!--  titlu descriere --></a></h4>
+                            <p class="text"><!--  descriere --></p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <div class="col-lg-4 col-sm-6 planning-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.7s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/imagini/202105/int2.jpeg" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/imagini/202105/int2.jpeg"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#"><!--  titlu descriere --></a></h4>
+                            <p class="text"><!--  descriere --></p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <div class="col-lg-4 col-sm-6 planning-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.7s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/imagini/202105/int3.jpeg" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/imagini/202105/int3.jpeg"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#"><!--  titlu descriere --></a></h4>
+                            <p class="text"><!--  descriere --></p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <!-- /gr3 -->
                 <div class="col-lg-4 col-sm-6 branding-3 planning-3">
                     <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
                         <div class="portfolio-image">
@@ -409,6 +602,7 @@
                         </div>
                     </div> <!-- single portfolio -->
                 </div>
+
             </div> <!-- row -->
         </div> <!-- container -->
     </section>
@@ -463,7 +657,7 @@
                     </div> <!-- pricing style one -->
                 </div>
                 
-                <div class="col-lg-4 col-md-7 col-sm-9">
+                <!-- <div class="col-lg-4 col-md-7 col-sm-9">
                     <div class="pricing-style-one mt-40 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.8s">
                         <div class="pricing-icon text-center">
                             <i class="culoare fas fa-fish fa-5x"></i>
@@ -479,8 +673,8 @@
                         <div class="pricing-btn rounded-buttons text-center">
                             <a class="main-btn rounded-three" href="https://wa.me/0040747224737">suna Acum</a>
                         </div>
-                    </div> <!-- pricing style one -->
-                </div>
+                    </div> 
+                </div> -->
             </div> <!-- row -->
         </div> <!-- container -->
     </section>
@@ -651,7 +845,7 @@
                     </div>
                     <div class="col-lg-5">
                         <ul class="social text-center text-lg-right mt-10">
-                            <li class="termeni"><a href="termeni-si-conditii.html">Termeni si Conditii</a></li>
+                            <li class="termeni"><a href="termeni-si-conditii.html"><p>Termeni si Conditii</p></a></li>
                             <li><a href="https://facebook.com/tainicadelta" target="_blank"><i class="lni-facebook-filled"></i></a></li>
                         </ul> <!-- social -->
                     </div>
