--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                         <div class="pricing-header text-center">
                             <h5 class="sub-title">Camera dubla / zi</h5>
                             <p class="month"><span class="price">280</span>/lei</p>
-                            <p>Cazare, mic dejun, transfer cu barca Murghiol - Uzlina</p>
+                            <p>mic dejun inclus</p>
                         </div>
                         <div class="pricing-list">
 
@@ -646,7 +646,7 @@
                         <div class="pricing-header text-center">
                             <h5 class="sub-title">3 zile + 1 Gratis</h5>
                             <p class="month"><span class="price">840</span>/lei</p>
-                            <p>Cazare, mic dejun, transfer cu barca Murghiol - Uzlina</p>
+                            <p>mic dejun inclus</p>
                         </div>
                         <div class="pricing-list">
 
