--- a/index.html
+++ b/index.html
@@ -186,15 +186,19 @@
                 <div class="col-xl-6 col-lg-8">
                     <div class="about-image text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-offset="100">
                     </div>
-                    <div class="section-title text-center mt-30 pb-40">
+                    <div class="section-title text-center mt-30 pb-20">
                         <h4 class="title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">Cazare pensiune turistica Tainica Delta</h4>
-                        <p class="text wow fadeInUp margine" data-wow-duration="1.5s" data-wow-delay="1s">Pensiunea Tainica Delta este situata in localitatea Uzlina, (la intrare pe canalul Uzlina), fiind unul dintre cele mai frumoase locuri din lume, acolo unde se imbina aventura si natura salbatica cu relaxarea si confortul, intr-un taram unic de vis.</br></br>
+                        <p class="text wow fadeInUp margine mt-20" data-wow-duration="1.5s" data-wow-delay="1s">Pensiunea Tainica Delta este situata in localitatea Uzlina, (la intrare pe canalul Uzlina), fiind unul dintre cele mai frumoase locuri din lume, acolo unde se imbina aventura si natura salbatica cu relaxarea si confortul, intr-un taram unic de vis.</br></br>
                             Vacanta dvs incepe la Murghiol (debarcader), de unde va vom prelua cu ambarcatiunile noastre pentru a va conduce la "Pensiunea Tainica Delta".</br></br>
                             Pensiunea Tainica Delta va poate oferi un sejur de neuitat printr-o plimbare unde natura te invaluie in timp ce te plimbi de-a lungul canalelor, pe cele mai frumoase trasee din Delta Dunarii, oferindu-ti experienta unica pe care o cauti.
                         </p>
+            <!-- video -->
+            <iframe class="mt-50" src="https://www.youtube.com/embed/U4NxRliSREQ" style="width: 90%; height: 320px;" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- video -->
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
+
             
             <div class="row">
                 <div class="col-lg-6">
