--- a/galerie.html
+++ b/galerie.html
@@ -79,7 +79,7 @@
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarEight">
                                 <ul class="navbar-nav ml-auto">
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#home">Acasa</a>
+                                        <a class="page-scroll" href="index.html">Acasa</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="index.html#about">Despre</a>
